--- a/LSTM Network - MultiStep time series forecasting - shampoo dataset.ipynb
+++ b/LSTM Network - MultiStep time series forecasting - shampoo dataset.ipynb
@@ -66,7 +66,9 @@
    "source": [
     "### Shampoo Sales Dataset\n",
     " - Este Dataset descreve mensalmente o valor de vendas de shampoo em um período de três anos.\n",
-    " - Os valores são uma contagem das vendas e existem 36 observações. "
+    " - Os valores são uma contagem das vendas e existem 36 observações. \n",
+    " - O dataset pode ser encontrado no seguinte link:\n",
+    "     - https://raw.githubusercontent.com/jbrownlee/Datasets/master/shampoo.csv"
    ]
   },
   {
